Simplify layout and add community modal

--- a/contact.html
+++ b/contact.html
@@ -24,15 +24,12 @@
     <nav class="nav reveal delay-1" aria-label="Site">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="resources.html">Resources</a>
-      <a href="privacy.html">Privacy</a>
-      <a href="terms.html">Terms</a>
       <a href="contact.html">Contact</a>
     </nav>
 
     <section class="hero reveal delay-2">
       <h2 class="page-title">Contact</h2>
-      <p class="page-sub">Feedback and corrections are welcome. Please include the English name and your preferred Hangul spelling.</p>
+      <p class="page-sub">Corrections and feedback welcome.</p>
     </section>
 
     <section class="section reveal delay-3">
@@ -42,7 +39,7 @@
 
     <section class="section reveal delay-4">
       <h3>What to include</h3>
-      <p>Device, browser, name tested, and the preferred Hangul spelling. A screenshot helps when relevant.</p>
+      <p>Device, browser, name tested, and your preferred Hangul spelling.</p>
     </section>
 
     <footer class="reveal delay-5">
