--- a/resources.html
+++ b/resources.html
@@ -25,39 +25,34 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="resources.html">Resources</a>
-      <a href="privacy.html">Privacy</a>
-      <a href="terms.html">Terms</a>
-      <a href="contact.html">Contact</a>
     </nav>
 
     <section class="hero reveal delay-2">
       <h2 class="page-title">Resources</h2>
-      <p class="page-sub">Notes about name spellings, pronunciation, and usage.</p>
+      <p class="page-sub">Quick notes for choosing a readable spelling.</p>
     </section>
 
     <section class="section reveal delay-3">
-      <h3>How to choose a spelling</h3>
+      <h3>Choosing a spelling</h3>
       <ul>
-        <li>Hangul spellings vary by preference and region.</li>
-        <li>Shorter spellings often look more natural on name tags.</li>
-        <li>When in doubt, use the spelling a Korean speaker would read comfortably.</li>
+        <li>Pick what reads naturally to a Korean speaker.</li>
+        <li>Shorter spellings often look cleaner on name tags.</li>
       </ul>
 
       <h3>Common patterns</h3>
       <ul>
-        <li>Long “a” sounds often map to “에이”.</li>
-        <li>“th” can vary between ㅅ and ㅌ depending on preference.</li>
-        <li>Final consonants may be softened to read smoothly in Hangul.</li>
+        <li>Long “a” often maps to “에이”.</li>
+        <li>“th” varies between ㅅ and ㅌ by preference.</li>
       </ul>
     </section>
 
     <section class="section reveal delay-4">
       <h3>Corrections</h3>
-      <p>If you prefer a different spelling, submit a community suggestion on the homepage so it can be reviewed.</p>
+      <p>Use the community suggestions on the homepage for review.</p>
     </section>
 
     <footer class="reveal delay-5">
-      © <span id="year"></span> Hangul Name Studio · <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a>
+      © <span id="year"></span> Hangul Name Studio · <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a> · <a href="contact.html">Contact</a>
     </footer>
   </main>
   <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
