--- a/terms.html
+++ b/terms.html
@@ -23,11 +23,8 @@
 
     <nav class="nav reveal delay-1" aria-label="Site">
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="resources.html">Resources</a>
       <a href="privacy.html">Privacy</a>
       <a href="terms.html">Terms</a>
-      <a href="contact.html">Contact</a>
     </nav>
 
     <section class="hero reveal delay-2">
@@ -37,22 +34,19 @@
 
     <section class="section reveal delay-3">
       <h3>Purpose</h3>
-      <p>This site provides a name-to-Hangul conversion tool for personal and informational use.</p>
+      <p>Name-to-Hangul conversion for personal and informational use.</p>
 
       <h3>Accuracy</h3>
-      <p>Spellings are not guaranteed to be official or universally accepted. Users are responsible for choosing the spelling they prefer.</p>
-
-      <h3>Content standards</h3>
-      <p>We focus on original, non-duplicative content and clear navigation so users can find the promised service quickly. Advertising, when shown, is kept secondary to the main content.</p>
+      <p>Spellings are not official. Choose the version you prefer.</p>
 
       <h3>Acceptable use</h3>
       <ul>
-        <li>Do not use the site for unlawful or harmful activities.</li>
-        <li>Do not attempt to disrupt or abuse the service.</li>
+        <li>No unlawful or harmful activity.</li>
+        <li>No disruption or abuse of the service.</li>
       </ul>
 
       <h3>Changes</h3>
-      <p>We may update these terms over time. Continued use means you accept the latest version.</p>
+      <p>We may update these terms. Continued use means acceptance.</p>
 
       <h3>Contact</h3>
       <p>Questions: goodhywon@gmail.com</p>
