--- a/about.html
+++ b/about.html
@@ -24,34 +24,26 @@
     <nav class="nav reveal delay-1" aria-label="Site">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="resources.html">Resources</a>
-      <a href="privacy.html">Privacy</a>
-      <a href="terms.html">Terms</a>
       <a href="contact.html">Contact</a>
     </nav>
 
     <section class="hero reveal delay-2">
       <h2 class="page-title">About</h2>
-      <p class="page-sub">Hangul Name Studio is a focused tool that converts English names into natural Hangul spellings. Community suggestions are reviewed before becoming official, keeping results accurate and consistent.</p>
+      <p class="page-sub">A focused tool for readable Hangul name spellings.</p>
     </section>
 
     <section class="section reveal delay-3">
-      <h3>Project goals</h3>
-      <p>Provide a clean, focused conversion experience with transparent review, simple navigation, and high-quality results that respect Korean reading patterns.</p>
+      <h3>What it does</h3>
+      <p>Dictionary-first conversion with community review for clarity and consistency.</p>
     </section>
 
     <section class="section reveal delay-4">
       <h3>Who it is for</h3>
-      <p>English speakers who want readable Hangul for travel, profiles, creative projects, or name tags. It is not an official romanization system.</p>
-    </section>
-
-    <section class="section reveal delay-5">
-      <h3>Quality & transparency</h3>
-      <p>We maintain clear navigation and original content focused on the name conversion experience. Ads, if shown, are secondary to the main content.</p>
+      <p>Anyone who wants a clean, natural Hangul version of an English name.</p>
     </section>
 
     <footer class="reveal delay-5">
-      © <span id="year"></span> Hangul Name Studio · <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a>
+      © <span id="year"></span> Hangul Name Studio · <a href="privacy.html">Privacy</a> · <a href="terms.html">Terms</a> · <a href="contact.html">Contact</a>
     </footer>
   </main>
   <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
