--- a/privacy.html
+++ b/privacy.html
@@ -23,11 +23,8 @@
 
     <nav class="nav reveal delay-1" aria-label="Site">
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="resources.html">Resources</a>
       <a href="privacy.html">Privacy</a>
       <a href="terms.html">Terms</a>
-      <a href="contact.html">Contact</a>
     </nav>
 
     <section class="hero reveal delay-2">
@@ -37,23 +34,23 @@
 
     <section class="section reveal delay-3">
       <h3>Summary</h3>
-      <p>Hangul Name Studio uses Firebase services to store community suggestions and moderation data. We do not collect personal profile information beyond what is required for authentication.</p>
+      <p>We use Firebase to store community suggestions and moderation data. No personal profiles are collected.</p>
 
-      <h3>Data we store</h3>
+      <h3>Data stored</h3>
       <ul>
-        <li>Suggestions you submit (name key, Hangul suggestion, timestamps)</li>
-        <li>Votes and reports associated with your anonymous account</li>
-        <li>Admin moderation actions for audit purposes</li>
+        <li>Submitted suggestions and timestamps</li>
+        <li>Anonymous votes and reports</li>
+        <li>Moderation actions</li>
       </ul>
 
       <h3>Authentication</h3>
-      <p>Visitors are authenticated anonymously to prevent abuse. The admin signs in with Google to approve or reject suggestions.</p>
+      <p>Anonymous sign-in protects the service. Admins use Google sign-in for review.</p>
 
       <h3>Advertising</h3>
-      <p>This site may display ads provided by Google. Google may use cookies or similar technologies to serve and measure ads. For more details, review Google’s advertising policies.</p>
+      <p>Google may serve ads and use cookies or similar technologies for delivery and measurement.</p>
 
       <h3>Contact</h3>
-      <p>Questions about this policy: goodhywon@gmail.com</p>
+      <p>Questions: goodhywon@gmail.com</p>
     </section>
 
     <footer class="reveal delay-5">
